<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="add_to_workout">Add to workout</string>
    <string name="name">Name</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="validate">Validate</string>
    <string name="type">Type :</string>
</resources>